--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Comme&family=Inconsolata&family=Inter:wght@400;500;600&family=Kanit&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>FLEMINI</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
+    <meta name="title" content="FLEMINI- Video Editor & Motion Designer">
+    <meta content="I’m FLEMINI, a Video Editor & Motion Designer" name="description">
+    <meta name="keywords" content="flemini, flemini edit, sanpertev, editing, video editor, motion designer, short editor, TikTok editor, YouTube editor, content editor, sound editing">
+    <meta name="robots" content="index, follow">
+    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta property="og:title" content="FLEMINI - Video Editor & Motion Designer">
+    <meta property="og:description" content="I've worked with content creators from various categories while improving my skills for over five years. I primarily specialize in gaming, gambling, IRL, and documentary content. I'm here to advance your content one step further with my expertise.">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>FLEMINI - Video Editor & Motion Designer</title>
 </head>
 <body id="about" class="fadeUp2">
     <nav class="fadeUp">
