--- a/index.html
+++ b/index.html
@@ -92,10 +92,16 @@
             <div class="container">
                 <div class="gif-container ">
                     <div class="gif">
-                        <img src="#" alt="#">
+                        <video id="myVideo" width="100%" autoplay loop controls="false" preload="metadata">
+                            <source src="img/motionedit_flemini.mp4" type="video/mp4">
+                            Tarayıcınız video etiketini desteklemiyor.
+                        </video>
                     </div>
                     <div class="gif">
-                        <img src="#" alt="#">
+                        <video id="myVideo" width="100%" autoplay loop controls="false" preload="metadata">
+                            <source src="img/contentedit_flemini.mp4" type="video/mp4">
+                            Tarayıcınız video etiketini desteklemiyor.
+                        </video>
                     </div>
                 </div>
                 <div class="social-links">
@@ -138,15 +144,15 @@
                 </h1>
                 <div class="portfolio-container reveal">
 
-                    <div class="video-card">
+                    <div class="video-card reveal">
                         <!-- 1.videonun linki -->
                         <iframe width="100%" height="100%"
-                            src="https://www.youtube.com/embed/bIRh_7Rwypw" 
+                            src="https://www.youtube.com/embed/ZpH2vKVNstc" 
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
                     </div>
-                    <div class="video-card">
+                    <div class="video-card reveal">
                         <!-- 2.videonun linki -->
                         <iframe width="100%" height="100%"
                             src="https://www.youtube.com/embed/zO9holYn21c" 
@@ -154,34 +160,82 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
                     </div>
-                    <div class="video-card">
+                    <div class="video-card reveal">
                         <!-- 3.videonun linki -->
                         <iframe width="100%" height="100%"
-                            src="https://www.youtube.com/embed/izPuGFKyvCU" 
+                            src="https://www.youtube.com/embed/9biame3CmQ4" 
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
                     </div>
-                    <div class="video-card">
+                    <div class="video-card reveal">
                         <!-- 4.videonun linki -->
                         <iframe width="100%" height="100%"
-                            src="https://www.youtube.com/embed/GEk5V_RjfjU" 
+                            src="https://www.youtube.com/embed/nX5UgCFltRk" 
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
                     </div>
-                    <div class="video-card">
+                    <div class="video-card reveal">
                         <!-- 5.videonun linki -->
                         <iframe width="100%" height="100%"
-                            src="https://www.youtube.com/embed/ro8iwvJq_Ko " 
+                            src="https://www.youtube.com/embed/TLEN8yz9g3c " 
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
                     </div>
-                    <div class="video-card">
+                    <div class="video-card reveal">
                         <!-- 6.videonun linki -->
                         <iframe width="100%" height="100%"
-                            src="https://www.youtube.com/embed/PvbUKUswUMA" 
+                            src="https://www.youtube.com/embed/bIRh_7Rwypw" 
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="video-card reveal">
+                        <!-- 7.videonun linki -->
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/V5_w0e60P0E" 
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="video-card reveal">
+                        <!-- 8.videonun linki -->
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/ro8iwvJq_Ko" 
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="video-card reveal">
+                        <!-- 9.videonun linki -->
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/arQTcuvWzaY" 
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="video-card reveal">
+                        <!-- 10.videonun linki -->
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/4bLI1yI59dU" 
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="video-card reveal">
+                        <!-- 11.videonun linki -->
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/aFUIgB3KoAs" 
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="video-card reveal">
+                        <!-- 12.videonun linki -->
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/Z-HdRR8m_d4" 
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
@@ -381,7 +435,7 @@
 
 <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-</head>
+
 <script>
     // Particles.js yapılandırması
     particlesJS("particles-js", {
