--- a/index.html
+++ b/index.html
@@ -437,7 +437,16 @@
 
 <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script>
+    const video1 = document.getElementById('myVideo1');
+    const video2 = document.getElementById('myVideo2');
 
+    // Sayfa tamamen yüklendiğinde videoları otomatik olarak başlat
+    window.addEventListener('load', () => {
+      video1.play();
+      video2.play();
+    });
+  </script>
 <script>
     // Particles.js yapılandırması
     particlesJS("particles-js", {
