--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
             <div class="container">
                 <div class="gif-container">
                     <div class="gif">
-                        <video id="myVideo1" width="100%" autoplay loop controls="false" preload="metadata">
+                        <video id="myVideo1" width="100%" loop controls="false" preload="metadata">
                             <source src="img/motionedit_flemini.mp4" type="video/mp4">
                             Tarayıcınız video etiketini desteklemiyor.
                         </video>
                     </div>
                     <div class="gif">
-                        <video id="myVideo2" width="100%" autoplay loop controls="false" preload="metadata">
+                        <video id="myVideo2" width="100%" loop controls="false" preload="metadata">
                             <source src="img/contentedit_flemini.mp4" type="video/mp4">
                             Tarayıcınız video etiketini desteklemiyor.
                         </video>
@@ -441,12 +441,47 @@
     const video1 = document.getElementById('myVideo1');
     const video2 = document.getElementById('myVideo2');
 
-    // Sayfa tamamen yüklendiğinde videoları otomatik olarak başlat
-    window.addEventListener('load', () => {
-      video1.play();
-      video2.play();
-    });
-  </script>
+    setTimeout(() => {
+        video1.play();
+        video2.play();
+    }, 1000);
+    setTimeout(() => {
+        video1.play();
+        video2.play();
+    }, 2000);
+    setTimeout(() => {
+        video1.play();
+        video2.play();
+    }, 3000);
+    setTimeout(() => {
+        video1.play();
+        video2.play();
+    }, 4000);
+    setTimeout(() => {
+        video1.play();
+        video2.play();
+    }, 5000);
+    setTimeout(() => {
+        video1.play();
+        video2.play();
+    }, 6000);
+    setTimeout(() => {
+        video1.play();
+        video2.play();
+    }, 7000);
+    setTimeout(() => {
+        video1.play();
+        video2.play();
+    }, 8000);
+    setTimeout(() => {
+        video1.play();
+        video2.play();
+    }, 9000);
+    setTimeout(() => {
+        video1.play();
+        video2.play();
+    }, 10000);
+</script>
 <script>
     // Particles.js yapılandırması
     particlesJS("particles-js", {
