--- a/index.html
+++ b/index.html
@@ -440,47 +440,14 @@
 <script>
     const video1 = document.getElementById('myVideo1');
     const video2 = document.getElementById('myVideo2');
-
+    window.addEventListener("mousemove", ()=>{
+        video1.play();
+        video2.play();
+    })
     setTimeout(() => {
         video1.play();
         video2.play();
     }, 1000);
-    setTimeout(() => {
-        video1.play();
-        video2.play();
-    }, 2000);
-    setTimeout(() => {
-        video1.play();
-        video2.play();
-    }, 3000);
-    setTimeout(() => {
-        video1.play();
-        video2.play();
-    }, 4000);
-    setTimeout(() => {
-        video1.play();
-        video2.play();
-    }, 5000);
-    setTimeout(() => {
-        video1.play();
-        video2.play();
-    }, 6000);
-    setTimeout(() => {
-        video1.play();
-        video2.play();
-    }, 7000);
-    setTimeout(() => {
-        video1.play();
-        video2.play();
-    }, 8000);
-    setTimeout(() => {
-        video1.play();
-        video2.play();
-    }, 9000);
-    setTimeout(() => {
-        video1.play();
-        video2.play();
-    }, 10000);
 </script>
 <script>
     // Particles.js yapılandırması
