--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
             <div class="container">
                 <div class="gif-container">
                     <div class="gif">
-                        <video id="myVideo1" width="100%" loop controls="false" autoplay muted loop playsinline preload="metadata">
+                        <video id="myVideo1" width="100%" loop controls="false" preload="metadata" autoplay="autoplay" muted>
                             <source src="img/motionedit_flemini.mp4" type="video/mp4">
-                            Tarayıcınız video etiketini desteklemiyor.
+   
                         </video>
                     </div>
                     <div class="gif">
-                        <video id="myVideo2" width="100%" loop controls="false" autoplay muted loop playsinline preload="metadata">
+                        <video id="myVideo2" width="100%" loop controls="false" preload="metadata" autoplay="autoplay" muted>
                             <source src="img/contentedit_flemini.mp4" type="video/mp4">
-                            Tarayıcınız video etiketini desteklemiyor.
+                       
                         </video>
                     </div>
                 </div>
