--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div id="particles-js"></div>
         <div class="section">
             <div class="container">
-                <div class="home-container">
+                <div class="home-container flemini">
                     <div class="img-section">
                         <img width="100%" src="#" alt="#">
                     </div>
