--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="container">
                 <div class="home-container flemini">
                     <div class="img-section">
-                        <img width="100%" src="#" alt="#">
+                        <img width="100%" src="profile.png" alt="profile">
                     </div>
                     <div class="home-content">
                         <h1>
