--- a/index.html
+++ b/index.html
@@ -122,18 +122,7 @@
                     </div>
                 </div>
 
-                <div class="social-links">
-                    <a href="https://www.linkedin.com/in/şan-pertev-2353261a4/?originalSubdomain=tr" target="_blank"
-                        class="linked">
-                        <i class="fa-brands fa-linkedin-in"></i>
-                    </a>
-                    <a href="https://instagram.com/sanpertev" target="_blank" class="twitter">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="https://twitter.com/fLEMlNl" target="_blank" class="insta">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                </div>
+                
             </div>
         </div>
         <div class="section ">
@@ -424,17 +413,17 @@
 
 
                 </div>
-                <!-- <div style="justify-content: center;" class="social-links ">
+                <div style="justify-content: center;" class="social-links ">
                     <a href="https://www.linkedin.com/in/şan-pertev-2353261a4/?originalSubdomain=tr" target="_blank" class="linked">
                         <i class="fa-brands fa-linkedin-in"></i>
                     </a>
-                    <a href="https://instagram.com/sanpertev" target="_blank" class="twitter">
+                    <a href="https://twitter.com/fLEMlNl" target="_blank" class="twitter">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
-                    <a href="https://twitter.com/fLEMlNl" target="_blank" class="insta">
+                    <a href="https://instagram.com/sanpertev" target="_blank" class="insta">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                </div> -->
+                </div>
             </div>
             
         </div>
